--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <h1>Geographical Science Questionnaire</h1>
         </header>
-        <div class="quiz-container">
+         <div class="quiz-container" style="background-image: url('assets/media/pexels-photo-7634760.png');">
             <div class="container">
                 <div id="username-container">
                     <label for="username">Username:</label>
