--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span id="wrong-answers">Wrong: 0</span>
         </div>
     </footer>
-    <script src="/java-modules/script.js" type="module"></script>
+    <script src="java-modules/script.js" type="module"></script>
 </body>
 
 </html>
