--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geographical Science Questionnaire</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <div class="center-container">
         <header>
             <div class="logo">
-                <img src="/assets/media/geographical-logo.jpg" alt="Geographical Logo">
+                <img src="assets/media/geographical-logo.jpg" alt="Geographical Logo">
             </div>
             <h1>Geographical Science Questionnaire</h1>
         </header>
-        <div class="quiz-container" style="background-image: url('/assets/media/pexels-photo-7634760.png');">
+        <div class="quiz-container" style="background-image: url('assets/media/pexels-photo-7634760.png');">
             <div class="container">
                 <div id="username-container">
                     <label for="username">Username:</label>
@@ -47,7 +47,7 @@
             <span id="wrong-answers">Wrong: 0</span>
         </div>
     </footer>
-    <script src="/java-modules/script.js" type="module"></script>
+    <script src="java-modules/script.js" type="module"></script>
 </body>
 
 </html>
