--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geographical Science Questionnaire</title>
     <link rel="stylesheet" href="assets/style.css">
+    <script src="java-modules/script.js" defer></script>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
             <span id="wrong-answers">Wrong: 0</span>
         </div>
     </footer>
-    <script src="/java-modules/script.js" type="module"></script>
+   
 </body>
 
 </html>
