--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </footer>
 
-    <script defer src="/java-modules/script.js" defer></script>
+    <script defer src="java-modules/script.js" defer></script>
 </body>
 
 </html>
