--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="quiz-container" style="background-image: url('assets/media/pexels-photo-7634760.png');">
             <div class="container">
                 <div id="username-container">
-                    <label for="username">Username:</label>
+                    <p label for="username">Username:</p>
                     <input type="text" id="username">
                     <button id="start">Start Quiz</button>
                 </div>
