--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Welcome to our questionnaire site where you can answer interesting questions and get instant feedback.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geographical Science Questionnaire</title>
     <link rel="stylesheet" href="assets/style.css">
